# searchbot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml
src/: alembic.ini  main.py
src/application/common/: admin.py  states.py  workbook.py
src/application/usecases/admin/: __init__.py  create_admin.py  delete_admin.py  get_admin.py
src/application/usecases/callbacks/: __init__.py  request_access.py  update_db_data.py  update_info.py
src/application/usecases/commands/: __init__.py  request_access.py  update_db_data.py  upload_file.py
src/application/usecases/document/: create_document.py  get_document.py
src/application/usecases/employe/: create_employe.py  get_employe.py
src/application/usecases/users/: __init__.py  create_user.py  delete_user.py  get_user.py  update_user.py
src/application/usecases/websites/: get_website.py  update_website.py
src/domain/admins/: admin.py  repository.py
src/domain/common/: enums.py  response.py
src/domain/documents/: document.py  repository.py
src/domain/employees/: employe.py  repository.py
src/domain/users/: repository.py  user.py
src/domain/websites/: repository.py  website.py
src/infrastructure/: config.py
src/infrastructure/di/: container.py
src/infrastructure/persistence/: main.py  transaction.py
src/infrastructure/persistence/migrations/: env.py
src/presentation/common/: keyboards.py
src/presentation/middlewares/: admin.py
src/presentation/routers/: admin.py  search.py
src/presentation/texts/: text.py
(+10 files in other folders)
