[tool.poetry]
name = "searchbot"
version = "0.1.0"
description = ""
authors = ["vedaka1 <vladik.kuleshov.2003@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.8.0"
sqlalchemy = "^2.0.31"
dishka = "^1.2.0"
pydantic-settings = "^2.3.3"
openpyxl = "^3.1.4"
httpx = "^0.27.0"
pandas = "^2.2.2"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
